@@ -105,7 +105,7 @@ external abs_float : float -> float = "%absfloat"
 external mod_float : float -> float -> float = "fmod_float" "fmod" "float"
 external frexp : float -> float * int = "frexp_float"
 external ldexp : float -> int -> float = "ldexp_float"
-external modf : float -> float * float = "modf_float" "modf"
+external modf : float -> float * float = "modf_float"
 external float : int -> float = "%floatofint"
 external float_of_int : int -> float = "%floatofint"
 external truncate : float -> int = "%intoffloat"
